MacroRegister can give the caller a user defined macro from the local environment, thus from the bottom of the scope stack. used to optimize options Junit upped to 5.8.1 Options handle global options containing ':' character lenient, noUndefault and emptyUndef are global options and the processor and the macros read the value from the global scope optimized OptionsStore is fully refactored to support OptionValues and optimized global option reading
Signed-off-by: Peter Verhas <peter@verhas.com>